feat: add type selection for QR Code generation

--- a/translation/de.json
+++ b/translation/de.json
@@ -1,154 +1,192 @@
 {
-  "qrOrganizer": "QR-Organisator",
-  "qrCodes": "Deine QR-Codes",
-  "scanQRCode": "QR-Code scannen",
-  "addEditQR": "QR hinzufügen/bearbeiten",
-  "qrDetails": "QR-Details",
-  "save": "Speichern",
-  "cancel": "Abbrechen",
-  "back": "Zurück",
-  "delete": "Löschen",
-  "confirmDelete": "Löschen bestätigen",
-  "deleteConfirmMessage": "Möchtest du diesen QR-Code wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
-  "ok": "OK",
-  "error": "Fehler",
-  "success": "Erfolg",
-  "copiedToClipboard": "In die Zwischenablage kopiert!",
-  "filterByTag": "Nach Tag filtern:",
-  "noQRCodes": "Keine QR-Codes gefunden. Scanne deinen ersten!",
-  "noQRCodesWithTag": "Keine QR-Codes mit dem Tag gefunden: {{tag}}",
-  "scanNewQRCode": "Neuen QR-Code scannen",
+  "about": "Über",
+  "actions": "Aktionen",
+  "addCodeTitle": "Neuen QR-Code hinzufügen",
+  "addEditQR": "QR hinzufügen",
   "addManually": "Manuell hinzufügen",
-  "tab-scanQR": "Scannen",
-  "tab-addQR": "Hinzufügen",
-  "tab-settings": "Einstellungen",
+  "addQRCode": "QR-Code hinzufügen",
+  "addTag": "Tag hinzufügen",
+  "appSettings": "App-Einstellungen",
+  "appearance": "Erscheinungsbild",
+  "back": "Zurück",
   "cameraPermissionDenied": "Kameraberechtigung verweigert. Bitte aktiviere sie in den Einstellungen, um QR-Codes zu scannen.",
-  "requestingCameraPermission": "Fordere Kameraberechtigung an...",
-  "noCameraAvailable": "Keine Kamera auf diesem Gerät verfügbar.",
-  "pointCameraToScan": "Richte die Kamera zum Scannen auf einen QR-Code",
-  "scannedData": "Gescannte Daten:",
-  "saveScannedCode": "Gescannten Code speichern",
-  "noCameraPermission": "Kameraberechtigung ist erforderlich, um QR-Codes zu scannen. Bitte aktiviere sie in den Geräteeinstellungen.",
+  "cancel": "Abbrechen",
+  "cannotOpenUrl": "Keine Anwendung kann diese URL verarbeiten.",
+  "city": "Stadt",
+  "clearAllData": "Alle Daten löschen",
+  "clearDataConfirmationMessage": "Möchtest du wirklich ALLE QR-Code-Daten löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
+  "clearDataConfirmationTitle": "Alle Daten löschen?",
+  "clearError": "Fehler beim Löschen der Daten.",
+  "clearSuccess": "Alle Daten erfolgreich gelöscht.",
+  "company": "Firma",
+  "confirmDelete": "Löschen bestätigen",
+  "contact": "Kontakt",
+  "content": "Inhalt",
+  "contentCopied": "Inhalt in die Zwischenablage kopiert!",
+  "contentLabel": "Inhalt",
+  "contentPlaceholder": "QR-Code-Daten (URL, Text usw.)",
+  "contentRequired": "Inhalt darf nicht leer sein.",
+  "copiedToClipboard": "In die Zwischenablage kopiert!",
+  "copyContent": "Inhalt kopieren",
+  "copyContentButton": "Inhalt kopieren",
+  "country": "Land",
+  "dangerZone": "Gefahrenzone",
+  "dataManagement": "Datenverwaltung",
+  "delete": "Löschen",
+  "deleteAll": "Alle löschen",
+  "deleteAllConfirmMessage": "Möchtest du wirklich ALLE QR-Codes löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
+  "deleteAllFailed": "Alle QR-Codes konnten nicht gelöscht werden.",
+  "deleteAllQRCodes": "Alle QR-Codes löschen?",
+  "deleteAllSuccess": "Alle QR-Codes erfolgreich gelöscht.",
+  "deleteButton": "Löschen",
+  "deleteConfirmMessage": "Möchtest du diesen QR-Code wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
+  "deleteFailed": "QR-Code konnte nicht gelöscht werden.",
+  "description": "Beschreibung",
+  "detailsContent": "Inhalt:",
+  "detailsCreatedAt": "Erstellt am:",
+  "detailsName": "Name:",
+  "detailsNotes": "Beschreibung:",
+  "detailsTags": "Tags:",
+  "developer": "Entwickler",
+  "edit": "Bearbeiten",
+  "editButton": "Bearbeiten",
+  "editCodeTitle": "QR-Code bearbeiten",
+  "editQRCode": "QR-Code bearbeiten",
+  "email": "E-Mail",
+  "encryption": "Verschlüsselung",
+  "enterDescription": "Gib eine optionale Beschreibung ein",
+  "enterEmailSubject": "E-Mail-Betreff eingeben",
+  "enterName": "Gib einen Namen für diesen QR-Code ein",
+  "enterNetworkName": "SSID eingeben",
+  "enterPassword": "Netzwerkpasswort eingeben",
+  "enterQrContentPlaceholder": "Gib hier den QR-Code-Inhalt ein (URL, Text usw.)",
+  "enterYourMessage": "Deine Nachricht eingeben",
+  "error": "Fehler",
+  "errorFetchingDetails": "Fehler beim Abrufen der QR-Code-Details.",
+  "exportAllCsv": "Alle exportieren (CSV)",
+  "exportAllJson": "Alle exportieren (JSON)",
+  "exportCsv": "Als CSV exportieren",
+  "exportData": "Daten exportieren",
+  "exportFailed": "QR-Code konnte nicht exportiert werden.",
+  "exportJson": "Als JSON exportieren",
+  "exportSuccess": "Daten erfolgreich exportiert. (Anzahl: {{count}})",
+  "failedToOpenUrl": "Fehler beim Öffnen der URL in Ihrem Browser.",
+  "fax": "Fax",
+  "featureComingSoon": "Funktion kommt bald!",
+  "fetchFailed": "QR-Code-Daten konnten nicht geladen werden.",
+  "filePicker": "Dateiauswahl konnte nicht geöffnet werden.",
+  "filterByTag": "Nach Tag filtern:",
+  "firstName": "Vorname",
+  "getStarted": "Los geht's",
   "goBack": "Zurück",
-  "scanAgain": "Erneut scannen",
-  "positionQRCode": "Platziere den QR-Code im Rahmen",
+  "hidden": "Versteckt",
+  "import": "Importieren",
+  "importConfirmMessage": "Dies importiert {{count}} QR-Code(s). Bestehende Codes mit derselben ID werden überschrieben.",
+  "importError": "Fehler beim Importieren der Daten.",
+  "importFailed": "Import fehlgeschlagen. Überprüfe das Dateiformat.",
+  "importFromFile": "Aus Datei importieren",
+  "importQRCodes": "QR-Codes importieren?",
+  "importSuccess": "Daten erfolgreich importiert. (Anzahl: {{count}})",
+  "importSuccessful": "{{count}} QR-Code(s) erfolgreich importiert.",
+  "invalidUrl": "Inhalt ist keine gültige URL.",
+  "jobTitle": "Berufsbezeichnung",
+  "language": "Sprache",
+  "lastName": "Nachname",
+  "loading": "Laden...",
+  "message": "Nachricht",
+  "mobile": "Mobil",
+  "name": "Name",
   "nameLabel": "Name",
   "namePlaceholder": "z.B. WLAN-Passwort, Veranstaltungsticket",
-  "contentLabel": "Inhalt",
-  "content": "Inhalt",
-  "contentPlaceholder": "QR-Code-Daten (URL, Text usw.)",
-  "shareContent": "Inhalt teilen",
-  "tagsLabel": "Tags (kommagetrennt)",
-  "tagsPlaceholder": "z.B. Arbeit, Zuhause, Wichtig",
+  "nameRequired": "Name ist erforderlich.",
+  "networkName": "Netzwerkname",
+  "next": "Weiter",
+  "noCameraAvailable": "Keine Kamera auf diesem Gerät verfügbar.",
+  "noCameraPermission": "Kameraberechtigung ist erforderlich, um QR-Codes zu scannen. Bitte aktiviere sie in den Geräteeinstellungen.",
+  "noQRCodes": "Keine QR-Codes gefunden. Scanne deinen ersten!",
+  "noQRCodesToExport": "Keine QR-Codes zum Exportieren gefunden.",
+  "noQRCodesToImport": "Keine gültigen QR-Codes in der Datei zum Importieren gefunden.",
+  "noQRCodesWithTag": "Keine QR-Codes mit dem Tag gefunden: {{tag}}",
+  "none": "Keine",
   "notesLabel": "Beschreibung",
   "notesPlaceholder": "Füge eine optionale Beschreibung hinzu",
-  "addCodeTitle": "Neuen QR-Code hinzufügen",
-  "editCodeTitle": "QR-Code bearbeiten",
-  "qrCodeSavedSuccess": "QR-Code erfolgreich gespeichert!",
-  "qrCodeAddError": "Fehler beim Hinzufügen des QR-Codes.",
-  "qrCodeUpdateError": "Fehler beim Aktualisieren des QR-Codes.",
-  "fetchFailed": "QR-Code-Daten konnten nicht geladen werden.",
-  "nameRequired": "Name ist erforderlich.",
-  "contentRequired": "Inhalt darf nicht leer sein.",
-  "saveFailed": "QR-Code konnte nicht gespeichert werden.",
-  "loading": "Laden...",
-  "editQRCode": "QR-Code bearbeiten",
-  "addQRCode": "QR-Code hinzufügen",
-  "name": "Name",
-  "enterName": "Gib einen Namen für diesen QR-Code ein",
-  "tags": "Tags",
-  "addTag": "Tag hinzufügen",
-  "description": "Beschreibung",
-  "enterDescription": "Gib eine optionale Beschreibung ein",
-  "qrContent": "QR-Code-Inhalt",
-  "enterQrContentPlaceholder": "Gib hier den QR-Code-Inhalt ein (URL, Text usw.)",
-  "update": "Aktualisieren",
-  "detailsName": "Name:",
-  "detailsContent": "Inhalt:",
-  "detailsTags": "Tags:",
-  "detailsCreatedAt": "Erstellt am:",
-  "detailsNotes": "Beschreibung:",
-  "editButton": "Bearbeiten",
-  "deleteButton": "Löschen",
-  "copyContentButton": "Inhalt kopieren",
+  "ok": "OK",
+  "onboarding": {
+    "getStarted": "Loslegen",
+    "next": "Weiter",
+    "shareDescription": "Exportieren Sie Ihre QR-Codes als JSON/CSV oder teilen Sie sie einfach.",
+    "shareTitle": "Exportieren & Teilen",
+    "tagsDescription": "Fügen Sie Tags und Beschreibungen zu Ihren QR-Codes hinzu, um sie einfach zu filtern.",
+    "tagsTitle": "Organisieren mit Tags",
+    "welcome": "Willkommen",
+    "welcomeDescription": "Scannen, organisieren und verwalten Sie Ihre QR-Codes offline.",
+    "welcomeTitle": "Willkommen bei QRbator!"
+  },
+  "onboarding1Text": "Scanne einfach jeden QR-Code und speichere ihn mit Namen, Tags und Beschreibung für schnellen Zugriff.",
+  "onboarding1Title": "Scannen & Speichern",
+  "onboarding2Text": "Verwende Tags, um deine QR-Codes zu kategorisieren und genau das zu finden, was du brauchst.",
+  "onboarding2Title": "Mit Tags organisieren",
+  "onboarding3Text": "Deine gespeicherten QR-Codes sind sicher auf deinem Gerät für Offline-Zugriff gespeichert.",
+  "onboarding3Title": "Überall zugreifen",
+  "open": "Öffnen",
   "openLinkButton": "Link öffnen",
-  "shareButton": "Teilen",
-  "viewRawDataButton": "Rohdaten anzeigen",
-  "rawDataTitle": "QR-Rohdaten",
-  "qrCodeNotFound": "QR-Code nicht gefunden.",
-  "errorFetchingDetails": "Fehler beim Abrufen der QR-Code-Details.",
-  "qrCodeDeletedSuccess": "QR-Code erfolgreich gelöscht.",
+  "openUrl": "URL erkannt",
+  "password": "Passwort",
+  "phone": "Telefon",
+  "pointCameraToScan": "Richte die Kamera zum Scannen auf einen QR-Code",
+  "positionQRCode": "Platziere den QR-Code im Rahmen",
+  "qrCodeAddError": "Fehler beim Hinzufügen des QR-Codes.",
+  "qrCodeContainsUrl": "Dieser QR-Code enthält eine URL. Möchten Sie sie in Ihrem Browser öffnen?",
   "qrCodeDeleteError": "Fehler beim Löschen des QR-Codes.",
-  "invalidUrl": "Inhalt ist keine gültige URL.",
-  "contentCopied": "Inhalt in die Zwischenablage kopiert!",
+  "qrCodeDeletedSuccess": "QR-Code erfolgreich gelöscht.",
+  "qrCodeNotFound": "QR-Code nicht gefunden.",
+  "qrCodeSavedSuccess": "QR-Code erfolgreich gespeichert!",
+  "qrCodeType": "QR-Code-Typ",
+  "qrCodeUpdateError": "Fehler beim Aktualisieren des QR-Codes.",
+  "qrCodes": "Deine QR-Codes",
+  "qrCodesCount": "QR-Codes gesamt: {{count}}",
+  "qrContent": "QR-Code-Inhalt",
+  "qrDetails": "QR-Details",
+  "qrOrganizer": "QR-Organisator",
+  "rawDataTitle": "QR-Rohdaten",
+  "requestingCameraPermission": "Fordere Kameraberechtigung an...",
+  "save": "Speichern",
+  "saveFailed": "QR-Code konnte nicht gespeichert werden.",
+  "saveScannedCode": "Gescannten Code speichern",
+  "scanAgain": "Erneut scannen",
+  "scanNewQRCode": "Neuen QR-Code scannen",
+  "scanQRCode": "QR-Code scannen",
+  "scannedData": "Gescannte Daten:",
+  "settings": {
+    "viewOnboarding": "Einführung anzeigen"
+  },
+  "settingsTitle": "Einstellungen",
+  "share": "Teilen",
+  "shareButton": "Teilen",
+  "shareContent": "Inhalt teilen",
   "shareFailed": "QR-Code konnte nicht geteilt werden.",
   "sharingNotAvailable": "Teilen ist auf diesem Gerät nicht verfügbar.",
-  "exportFailed": "QR-Code konnte nicht exportiert werden.",
-  "deleteFailed": "QR-Code konnte nicht gelöscht werden.",
-  "actions": "Aktionen",
-  "copyContent": "Inhalt kopieren",
-  "share": "Teilen",
-  "exportJson": "Als JSON exportieren",
-  "exportCsv": "Als CSV exportieren",
-  "edit": "Bearbeiten",
-  "settingsTitle": "Einstellungen",
-  "appearance": "Erscheinungsbild",
-  "language": "Sprache",
-  "dataManagement": "Datenverwaltung",
-  "exportData": "Daten exportieren",
-  "importData": "Daten importieren",
-  "clearAllData": "Alle Daten löschen",
-  "clearDataConfirmationTitle": "Alle Daten löschen?",
-  "clearDataConfirmationMessage": "Möchtest du wirklich ALLE QR-Code-Daten löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
-  "exportSuccess": "Daten erfolgreich exportiert. (Anzahl: {{count}})",
-  "importSuccess": "Daten erfolgreich importiert. (Anzahl: {{count}})",
-  "importError": "Fehler beim Importieren der Daten.",
-  "clearSuccess": "Alle Daten erfolgreich gelöscht.",
-  "clearError": "Fehler beim Löschen der Daten.",
-  "featureComingSoon": "Funktion kommt bald!",
-  "about": "Über",
-  "version": "Version",
-  "developer": "Entwickler",
-  "visitWebsite": "Webseite besuchen",
-  "noQRCodesToExport": "Keine QR-Codes zum Exportieren gefunden.",
-  "importFailed": "Import fehlgeschlagen. Überprüfe das Dateiformat.",
-  "unsupportedFileFormat": "Nicht unterstütztes Dateiformat. Bitte JSON oder CSV verwenden.",
-  "noQRCodesToImport": "Keine gültigen QR-Codes in der Datei zum Importieren gefunden.",
-  "importQRCodes": "QR-Codes importieren?",
-  "importConfirmMessage": "Dies importiert {{count}} QR-Code(s). Bestehende Codes mit derselben ID werden überschrieben.",
-  "import": "Importieren",
-  "importSuccessful": "{{count}} QR-Code(s) erfolgreich importiert.",
-  "filePicker": "Dateiauswahl konnte nicht geöffnet werden.",
-  "deleteAllQRCodes": "Alle QR-Codes löschen?",
-  "deleteAllConfirmMessage": "Möchtest du wirklich ALLE QR-Codes löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
-  "deleteAll": "Alle löschen",
-  "deleteAllSuccess": "Alle QR-Codes erfolgreich gelöscht.",
-  "deleteAllFailed": "Alle QR-Codes konnten nicht gelöscht werden.",
-  "appSettings": "App-Einstellungen",
-  "qrCodesCount": "QR-Codes gesamt: {{count}}",
-  "exportAllJson": "Alle exportieren (JSON)",
-  "exportAllCsv": "Alle exportieren (CSV)",
-  "importFromFile": "Aus Datei importieren",
+  "state": "Bundesland",
+  "street": "Straße",
+  "streetAddress": "Straße und Hausnummer",
+  "subject": "Betreff",
+  "success": "Erfolg",
   "supportedFormats": "(Unterstützt .json, .csv)",
-  "dangerZone": "Gefahrenzone",
+  "tab-addQR": "Hinzufügen",
+  "tab-scanQR": "Scannen",
+  "tab-settings": "Einstellungen",
+  "tags": "Tags",
+  "tagsLabel": "Tags (kommagetrennt)",
+  "tagsPlaceholder": "z.B. Arbeit, Zuhause, Wichtig",
+  "unsupportedFileFormat": "Nicht unterstütztes Dateiformat. Bitte JSON oder CSV verwenden.",
+  "update": "Aktualisieren",
+  "version": "Version",
+  "viewRawDataButton": "Rohdaten anzeigen",
+  "visitWebsite": "Webseite besuchen",
+  "website": "Website",
+  "websiteUrl": "Website-URL",
   "welcome": "Willkommen beim QR-Organisator!",
-  "onboarding1Title": "Scannen & Speichern",
-  "onboarding1Text": "Scanne einfach jeden QR-Code und speichere ihn mit Namen, Tags und Beschreibung für schnellen Zugriff.",
-  "onboarding2Title": "Mit Tags organisieren",
-  "onboarding2Text": "Verwende Tags, um deine QR-Codes zu kategorisieren und genau das zu finden, was du brauchst.",
-  "onboarding3Title": "Überall zugreifen",
-  "onboarding3Text": "Deine gespeicherten QR-Codes sind sicher auf deinem Gerät für Offline-Zugriff gespeichert.",
-  "getStarted": "Los geht's",
-  "next": "Weiter",
-  "onboarding": {
-    "welcome": "Willkommen",
-    "welcomeTitle": "Willkommen bei QRbator!",
-    "welcomeDescription": "Scannen, organisieren und verwalten Sie Ihre QR-Codes offline.",
-    "tagsTitle": "Organisieren mit Tags",
-    "tagsDescription": "Fügen Sie Tags und Beschreibungen zu Ihren QR-Codes hinzu, um sie einfach zu filtern.",
-    "shareTitle": "Exportieren & Teilen",
-    "shareDescription": "Exportieren Sie Ihre QR-Codes als JSON/CSV oder teilen Sie sie einfach.",
-    "next": "Weiter",
-    "getStarted": "Loslegen"
-  }
+  "yourEmail": "Deine E-Mail",
+  "yourName": "Dein Name",
+  "zip": "PLZ"
 }
