--- a/translation/en.json
+++ b/translation/en.json
@@ -1,154 +1,192 @@
 {
-  "qrOrganizer": "QR Organizer",
-  "qrCodes": "Your QR Codes",
-  "scanQRCode": "Scan QR Code",
-  "addEditQR": "Add/Edit QR",
-  "qrDetails": "QR Details",
-  "save": "Save",
-  "cancel": "Cancel",
-  "back": "Back",
-  "delete": "Delete",
-  "confirmDelete": "Confirm Delete",
-  "deleteConfirmMessage": "Are you sure you want to delete this QR code? This action cannot be undone.",
-  "ok": "OK",
-  "error": "Error",
-  "success": "Success",
-  "copiedToClipboard": "Copied to clipboard!",
-  "filterByTag": "Filter by tag:",
-  "noQRCodes": "No QR Codes found. Scan your first one!",
-  "noQRCodesWithTag": "No QR Codes found with tag: {{tag}}",
-  "scanNewQRCode": "Scan New QR Code",
+  "about": "About",
+  "actions": "Actions",
+  "addCodeTitle": "Add New QR Code",
+  "addEditQR": "Add QR",
   "addManually": "Add Manually",
-  "tab-scanQR": "Scan",
-  "tab-addQR": "Add",
-  "tab-settings": "Settings",
+  "addQRCode": "Add QR Code",
+  "addTag": "Add Tag",
+  "appSettings": "App Settings",
+  "appearance": "Appearance",
+  "back": "Back",
   "cameraPermissionDenied": "Camera permission was denied. Please enable it in settings to scan QR codes.",
-  "requestingCameraPermission": "Requesting camera permission...",
-  "noCameraAvailable": "No camera available on this device.",
-  "pointCameraToScan": "Point camera at a QR code to scan",
-  "scannedData": "Scanned Data:",
-  "saveScannedCode": "Save Scanned Code",
-  "noCameraPermission": "Camera permission is required to scan QR codes. Please enable it in your device settings.",
+  "cancel": "Cancel",
+  "cannotOpenUrl": "No application can handle this URL.",
+  "city": "City",
+  "clearAllData": "Clear All Data",
+  "clearDataConfirmationMessage": "Are you sure you want to delete ALL QR code data? This action cannot be undone.",
+  "clearDataConfirmationTitle": "Clear All Data?",
+  "clearError": "Error clearing data.",
+  "clearSuccess": "All data cleared successfully.",
+  "company": "Company",
+  "confirmDelete": "Confirm Delete",
+  "contact": "Contact",
+  "content": "Content",
+  "contentCopied": "Content copied to clipboard!",
+  "contentLabel": "Content",
+  "contentPlaceholder": "QR code data (URL, text, etc.)",
+  "contentRequired": "Content cannot be empty.",
+  "copiedToClipboard": "Copied to clipboard!",
+  "copyContent": "Copy Content",
+  "copyContentButton": "Copy Content",
+  "country": "Country",
+  "dangerZone": "Danger Zone",
+  "dataManagement": "Data Management",
+  "delete": "Delete",
+  "deleteAll": "Delete All",
+  "deleteAllConfirmMessage": "Are you sure you want to delete ALL QR codes? This action cannot be undone.",
+  "deleteAllFailed": "Failed to delete all QR codes.",
+  "deleteAllQRCodes": "Delete All QR Codes?",
+  "deleteAllSuccess": "All QR codes deleted successfully.",
+  "deleteButton": "Delete",
+  "deleteConfirmMessage": "Are you sure you want to delete this QR code? This action cannot be undone.",
+  "deleteFailed": "Failed to delete QR code.",
+  "description": "Description",
+  "detailsContent": "Content:",
+  "detailsCreatedAt": "Created At:",
+  "detailsName": "Name:",
+  "detailsNotes": "Description:",
+  "detailsTags": "Tags:",
+  "developer": "Developer",
+  "edit": "Edit",
+  "editButton": "Edit",
+  "editCodeTitle": "Edit QR Code",
+  "editQRCode": "Edit QR Code",
+  "email": "Email",
+  "encryption": "Encryption",
+  "enterDescription": "Enter an optional description",
+  "enterEmailSubject": "Enter email subject",
+  "enterName": "Enter a name for this QR code",
+  "enterNetworkName": "Enter network SSID",
+  "enterPassword": "Enter network password",
+  "enterQrContentPlaceholder": "Enter QR Code content here (URL, text, etc.)",
+  "enterYourMessage": "Enter your message",
+  "error": "Error",
+  "errorFetchingDetails": "Error fetching QR code details.",
+  "exportAllCsv": "Export All (CSV)",
+  "exportAllJson": "Export All (JSON)",
+  "exportCsv": "Export CSV",
+  "exportData": "Export Data",
+  "exportFailed": "Failed to export QR code.",
+  "exportJson": "Export JSON",
+  "exportSuccess": "Data exported successfully. (Count: {{count}})",
+  "failedToOpenUrl": "Failed to open the URL in your browser.",
+  "fax": "Fax",
+  "featureComingSoon": "Feature coming soon!",
+  "fetchFailed": "Failed to load QR code data.",
+  "filePicker": "Could not open file picker.",
+  "filterByTag": "Filter by tag:",
+  "firstName": "First name",
+  "getStarted": "Get Started",
   "goBack": "Go Back",
-  "scanAgain": "Scan Again",
-  "positionQRCode": "Position QR Code within the frame",
+  "hidden": "Hidden",
+  "import": "Import",
+  "importConfirmMessage": "This will import {{count}} QR code(s). Existing codes with the same ID will be overwritten.",
+  "importError": "Error importing data.",
+  "importFailed": "Import failed. Check file format.",
+  "importFromFile": "Import from File",
+  "importQRCodes": "Import QR Codes?",
+  "importSuccess": "Data imported successfully. (Count: {{count}})",
+  "importSuccessful": "Successfully imported {{count}} QR code(s).",
+  "invalidUrl": "Content is not a valid URL.",
+  "jobTitle": "Your Job",
+  "language": "Language",
+  "lastName": "Last name",
+  "loading": "Loading...",
+  "message": "Message",
+  "mobile": "Mobile",
+  "name": "Name",
   "nameLabel": "Name",
   "namePlaceholder": "e.g., Wi-Fi Password, Event Ticket",
-  "contentLabel": "Content",
-  "content": "Content",
-  "contentPlaceholder": "QR code data (URL, text, etc.)",
-  "shareContent": "Share Content",
-  "tagsLabel": "Tags (comma-separated)",
-  "tagsPlaceholder": "e.g., work, home, important",
+  "nameRequired": "Name is required.",
+  "networkName": "Network Name",
+  "next": "Next",
+  "noCameraAvailable": "No camera available on this device.",
+  "noCameraPermission": "Camera permission is required to scan QR codes. Please enable it in your device settings.",
+  "noQRCodes": "No QR Codes found. Scan your first one!",
+  "noQRCodesToExport": "No QR codes found to export.",
+  "noQRCodesToImport": "No valid QR codes found in the file to import.",
+  "noQRCodesWithTag": "No QR Codes found with tag: {{tag}}",
+  "none": "None",
   "notesLabel": "Description",
   "notesPlaceholder": "Add an optional description",
-  "addCodeTitle": "Add New QR Code",
-  "editCodeTitle": "Edit QR Code",
-  "qrCodeSavedSuccess": "QR Code saved successfully!",
-  "qrCodeAddError": "Error adding QR code.",
-  "qrCodeUpdateError": "Error updating QR code.",
-  "fetchFailed": "Failed to load QR code data.",
-  "nameRequired": "Name is required.",
-  "contentRequired": "Content cannot be empty.",
-  "saveFailed": "Failed to save QR code.",
-  "loading": "Loading...",
-  "editQRCode": "Edit QR Code",
-  "addQRCode": "Add QR Code",
-  "name": "Name",
-  "enterName": "Enter a name for this QR code",
-  "tags": "Tags",
-  "addTag": "Add Tag",
-  "description": "Description",
-  "enterDescription": "Enter an optional description",
-  "qrContent": "QR Code Content",
-  "enterQrContentPlaceholder": "Enter QR Code content here (URL, text, etc.)",
-  "update": "Update",
-  "detailsName": "Name:",
-  "detailsContent": "Content:",
-  "detailsTags": "Tags:",
-  "detailsCreatedAt": "Created At:",
-  "detailsNotes": "Description:",
-  "editButton": "Edit",
-  "deleteButton": "Delete",
-  "copyContentButton": "Copy Content",
+  "ok": "OK",
+  "onboarding": {
+    "getStarted": "Get Started",
+    "next": "Next",
+    "shareDescription": "Export your QR codes as JSON/CSV or share them easily.",
+    "shareTitle": "Export & Share",
+    "tagsDescription": "Add tags and descriptions to your QR codes for easy filtering.",
+    "tagsTitle": "Organize with Tags",
+    "welcome": "Welcome",
+    "welcomeDescription": "Scan, organize, and manage your QR codes offline.",
+    "welcomeTitle": "Welcome to QRbator!"
+  },
+  "onboarding1Text": "Easily scan any QR code and save it with a name, tags, and description for quick access later.",
+  "onboarding1Title": "Scan & Save",
+  "onboarding2Text": "Use tags to categorize your QR codes, making it simple to find exactly what you need.",
+  "onboarding2Title": "Organize with Tags",
+  "onboarding3Text": "Your saved QR codes are stored securely on your device for offline access.",
+  "onboarding3Title": "Access Anywhere",
+  "open": "Open",
   "openLinkButton": "Open Link",
-  "shareButton": "Share",
-  "viewRawDataButton": "View Raw Data",
-  "rawDataTitle": "Raw QR Data",
-  "qrCodeNotFound": "QR Code not found.",
-  "errorFetchingDetails": "Error fetching QR code details.",
-  "qrCodeDeletedSuccess": "QR Code deleted successfully.",
+  "openUrl": "URL Detected",
+  "password": "Password",
+  "phone": "Phone",
+  "pointCameraToScan": "Point camera at a QR code to scan",
+  "positionQRCode": "Position QR Code within the frame",
+  "qrCodeAddError": "Error adding QR code.",
+  "qrCodeContainsUrl": "This QR code contains a URL. Would you like to open it in your browser?",
   "qrCodeDeleteError": "Error deleting QR code.",
-  "invalidUrl": "Content is not a valid URL.",
-  "contentCopied": "Content copied to clipboard!",
+  "qrCodeDeletedSuccess": "QR Code deleted successfully.",
+  "qrCodeNotFound": "QR Code not found.",
+  "qrCodeSavedSuccess": "QR Code saved successfully!",
+  "qrCodeType": "QR Code Type",
+  "qrCodeUpdateError": "Error updating QR code.",
+  "qrCodes": "Your QR Codes",
+  "qrCodesCount": "Total QR Codes: {{count}}",
+  "qrContent": "QR Code Content",
+  "qrDetails": "QR Details",
+  "qrOrganizer": "QR Organizer",
+  "rawDataTitle": "Raw QR Data",
+  "requestingCameraPermission": "Requesting camera permission...",
+  "save": "Save",
+  "saveFailed": "Failed to save QR code.",
+  "saveScannedCode": "Save Scanned Code",
+  "scanAgain": "Scan Again",
+  "scanNewQRCode": "Scan New QR Code",
+  "scanQRCode": "Scan QR Code",
+  "scannedData": "Scanned Data:",
+  "settings": {
+    "viewOnboarding": "View Onboarding"
+  },
+  "settingsTitle": "Settings",
+  "share": "Share",
+  "shareButton": "Share",
+  "shareContent": "Share Content",
   "shareFailed": "Failed to share QR code.",
   "sharingNotAvailable": "Sharing is not available on this device.",
-  "exportFailed": "Failed to export QR code.",
-  "deleteFailed": "Failed to delete QR code.",
-  "actions": "Actions",
-  "copyContent": "Copy Content",
-  "share": "Share",
-  "exportJson": "Export JSON",
-  "exportCsv": "Export CSV",
-  "edit": "Edit",
-  "settingsTitle": "Settings",
-  "appearance": "Appearance",
-  "language": "Language",
-  "dataManagement": "Data Management",
-  "exportData": "Export Data",
-  "importData": "Import Data",
-  "clearAllData": "Clear All Data",
-  "clearDataConfirmationTitle": "Clear All Data?",
-  "clearDataConfirmationMessage": "Are you sure you want to delete ALL QR code data? This action cannot be undone.",
-  "exportSuccess": "Data exported successfully. (Count: {{count}})",
-  "importSuccess": "Data imported successfully. (Count: {{count}})",
-  "importError": "Error importing data.",
-  "clearSuccess": "All data cleared successfully.",
-  "clearError": "Error clearing data.",
-  "featureComingSoon": "Feature coming soon!",
-  "about": "About",
-  "version": "Version",
-  "developer": "Developer",
-  "visitWebsite": "Visit Website",
-  "noQRCodesToExport": "No QR codes found to export.",
-  "importFailed": "Import failed. Check file format.",
-  "unsupportedFileFormat": "Unsupported file format. Please use JSON or CSV.",
-  "noQRCodesToImport": "No valid QR codes found in the file to import.",
-  "importQRCodes": "Import QR Codes?",
-  "importConfirmMessage": "This will import {{count}} QR code(s). Existing codes with the same ID will be overwritten.",
-  "import": "Import",
-  "importSuccessful": "Successfully imported {{count}} QR code(s).",
-  "filePicker": "Could not open file picker.",
-  "deleteAllQRCodes": "Delete All QR Codes?",
-  "deleteAllConfirmMessage": "Are you sure you want to delete ALL QR codes? This action cannot be undone.",
-  "deleteAll": "Delete All",
-  "deleteAllSuccess": "All QR codes deleted successfully.",
-  "deleteAllFailed": "Failed to delete all QR codes.",
-  "appSettings": "App Settings",
-  "qrCodesCount": "Total QR Codes: {{count}}",
-  "exportAllJson": "Export All (JSON)",
-  "exportAllCsv": "Export All (CSV)",
-  "importFromFile": "Import from File",
+  "state": "State",
+  "street": "Street",
+  "streetAddress": "Street address",
+  "subject": "Subject",
+  "success": "Success",
   "supportedFormats": "(Supports .json, .csv)",
-  "dangerZone": "Danger Zone",
+  "tab-addQR": "Add",
+  "tab-scanQR": "Scan",
+  "tab-settings": "Settings",
+  "tags": "Tags",
+  "tagsLabel": "Tags (comma-separated)",
+  "tagsPlaceholder": "e.g., work, home, important",
+  "unsupportedFileFormat": "Unsupported file format. Please use JSON or CSV.",
+  "update": "Update",
+  "version": "Version",
+  "viewRawDataButton": "View Raw Data",
+  "visitWebsite": "Visit Website",
+  "website": "Website",
+  "websiteUrl": "Website URL",
   "welcome": "Welcome to QR Organizer!",
-  "onboarding1Title": "Scan & Save",
-  "onboarding1Text": "Easily scan any QR code and save it with a name, tags, and description for quick access later.",
-  "onboarding2Title": "Organize with Tags",
-  "onboarding2Text": "Use tags to categorize your QR codes, making it simple to find exactly what you need.",
-  "onboarding3Title": "Access Anywhere",
-  "onboarding3Text": "Your saved QR codes are stored securely on your device for offline access.",
-  "getStarted": "Get Started",
-  "next": "Next",
-  "onboarding": {
-    "welcome": "Welcome",
-    "welcomeTitle": "Welcome to QRbator!",
-    "welcomeDescription": "Scan, organize, and manage your QR codes offline.",
-    "tagsTitle": "Organize with Tags",
-    "tagsDescription": "Add tags and descriptions to your QR codes for easy filtering.",
-    "shareTitle": "Export & Share",
-    "shareDescription": "Export your QR codes as JSON/CSV or share them easily.",
-    "next": "Next",
-    "getStarted": "Get Started"
-  }
+  "yourEmail": "Your email",
+  "yourName": "Your Name",
+  "zip": "ZIP"
 }
